--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,4 +41,5 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.juul.able:core:0.7.1"
+    implementation "com.juul.able:device:0.7.1"
 }
