--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,6 +40,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8"
     implementation "com.juul.able:core:0.7.1"
-    implementation "com.juul.able:device:0.7.1"
 }
